--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -812,19 +812,55 @@ h6,
 #header1-1a .mbr-section-title {
   font-size: 46px;
 }
-#header2-7 .mbr-section-title {
-  font-size: 48px;
+#msg-box4-1d H3 {
+  color: #ffffff;
 }
-#form2-9 .mbr-section-title {
+#form2-1b .mbr-section-title {
   color: #fff;
   font-size: 36px;
-  text-align: center;
 }
-#form2-9 .mbr-section-subtitle {
+#form2-1b .mbr-section-subtitle {
   color: #a0a0a0;
 }
-#features3-g H4 {
-  text-align: center;
+#extShop1-1c .galleryItem h4:hover {
+  color: #c0a375;
+}
+#extShop1-1c .mbr-gallery-filter ul li.active {
+  color: #c0a375;
+}
+#extShop1-1c .mbr-gallery-filter ul li:hover {
+  color: #c0a375;
+}
+#extShop1-1c .mbr-gallery-filter ul li:before {
+  background: #c0a375;
+}
+#extShop1-1c .min-toggle:hover,
+#extShop1-1c .max-toggle:hover {
+  background-color: #c0a375;
+}
+#extShop1-1c .shop-title {
+  font-family: Montserrat;
+}
+#extShop1-1c .categories-titles .mbr-gallery-filter ul li {
+  font-family: Montserrat;
+}
+#extShop1-1c .max-input {
+  font-family: Montserrat;
+}
+#extShop1-1c .min-input {
+  font-family: Montserrat;
+}
+#extShop1-1c .item-title {
+  font-family: Montserrat;
+}
+#extShop1-1c .item-subtitle {
+  font-family: Lora;
+}
+#extShop1-1c .card-description {
+  font-family: Raleway;
+}
+#extShop1-1c .shop-item-price {
+  font-family: Montserrat;
 }
 #features4-x .card-subtitle {
   color: #bcbcbc;
@@ -851,74 +887,6 @@ h6,
 #testimonials1-h .card-footer > div {
   color: #000000;
 }
-#menu-r .hide-buttons .nav-btn {
-  display: none !important;
-}
-#menu-r .navbar-caption {
-  color: #ffffff;
-  font-size: 20px;
-}
-#menu-r .navbar-toggler {
-  color: #ffffff;
-}
-#menu-r .link,
-#menu-r .dropdown-item {
-  color: #ffffff;
-}
-#menu-r .link {
-  font-size: 0.75rem;
-}
-#menu-r .dropdown-item,
-#menu-r .nav-dropdown-sm .link {
-  font-size: 0.812rem;
-}
-#menu-r .link:hover,
-#menu-r .dropdown-item:hover,
-#menu-r .link:focus,
-#menu-r .dropdown-item:focus {
-  color: #c0a375;
-}
-#menu-r .link[aria-expanded="true"],
-#menu-r .dropdown-menu {
-  background: #0e0e0e;
-}
-#menu-r .nav-dropdown-sm .link:focus,
-#menu-r .nav-dropdown-sm .link:hover,
-#menu-r .nav-dropdown-sm .dropdown-item:focus,
-#menu-r .nav-dropdown-sm .dropdown-item:hover {
-  background: #202020!important;
-}
-#menu-r .navbar,
-#menu-r .nav-dropdown-sm,
-#menu-r .nav-dropdown-sm .link[aria-expanded="true"],
-#menu-r .nav-dropdown-sm .dropdown-menu {
-  background: #282828;
-}
-#menu-r .bg-color.transparent .link {
-  color: #ffffff;
-  transition: none;
-}
-#menu-r .bg-color.transparent.opened .link {
-  transition: color 0.2s ease-in-out;
-}
-#menu-r .bg-color.transparent.opened .link:hover,
-#menu-r .bg-color.transparent.opened .link:focus {
-  color: #c0a375;
-}
-#menu-r .link[aria-expanded="true"],
-#menu-r .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
-}
-#menu-r.mbr-navbar--stuck .mbr-navbar__section {
-  background: #2c2c2c;
-}
-#menu-r .mbr-navbar__hamburger {
-  color: #ffffff;
-}
-#menu-r .close-icon::before,
-#menu-r .close-icon::after {
-  background-color: #ffffff;
-}
 #extHeader13-z H3 {
   font-size: 36px;
 }
@@ -928,4 +896,72 @@ h6,
 }
 #extHeader13-z H4 {
   font-size: 36px;
+}
+#menu-0 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#menu-0 .navbar-caption {
+  color: #ffffff;
+  font-size: 20px;
+}
+#menu-0 .navbar-toggler {
+  color: #ffffff;
+}
+#menu-0 .link,
+#menu-0 .dropdown-item {
+  color: #ffffff;
+}
+#menu-0 .link {
+  font-size: 0.75rem;
+}
+#menu-0 .dropdown-item,
+#menu-0 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#menu-0 .link:hover,
+#menu-0 .dropdown-item:hover,
+#menu-0 .link:focus,
+#menu-0 .dropdown-item:focus {
+  color: #c0a375;
+}
+#menu-0 .link[aria-expanded="true"],
+#menu-0 .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-0 .nav-dropdown-sm .link:focus,
+#menu-0 .nav-dropdown-sm .link:hover,
+#menu-0 .nav-dropdown-sm .dropdown-item:focus,
+#menu-0 .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-0 .navbar,
+#menu-0 .nav-dropdown-sm,
+#menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-0 .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-0 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-0 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-0 .bg-color.transparent.opened .link:hover,
+#menu-0 .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#menu-0 .link[aria-expanded="true"],
+#menu-0 .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
+}
+#menu-0.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#menu-0 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#menu-0 .close-icon::before,
+#menu-0 .close-icon::after {
+  background-color: #ffffff;
 }
